--- a/src/app/admin/interests/interests.component.html
+++ b/src/app/admin/interests/interests.component.html
@@ -1,3 +1,41 @@
-<p>
-  interests works!
-</p>
+<div class="container">
+  <div class="row-mt-5">
+    <div class="col-mid-1">
+
+    </div>
+
+    <div class="col-mid-10">
+      <table>
+        <tr>
+          <th>Interest</th>
+          <th>Edit</th>
+        </tr>
+        <tr>
+          <td>
+            <input placeholder="text" [(ngModel)]="interesttoinsert.interest">
+          </td>
+          <td>
+            <button (click)="insert(interesttoinsert)">Insert</button>
+          </td>
+          <td>
+            <button (click)="clear()">Delete</button>
+          </td>
+        </tr>
+        <tr *ngFor="let interest of interests">
+          <td>
+            <label>{{interest.interest}}</label>
+          </td>
+          <td>
+            <button (click)=update(interest)>Save</button>
+          </td>
+          <td>
+            <button (click)="delete(interest)">Delete</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-md-1">
+
+    </div>
+  </div>
+</div>
