--- a/src/app/admin/tags/tags.component.html
+++ b/src/app/admin/tags/tags.component.html
@@ -1,3 +1,51 @@
-<p>
-  tags works!
-</p>
+<div class="container">
+  <div class="row-mt-5">
+    <div class="col-mid-1">
+
+    </div>
+
+    <div class="col-mid-10">
+      <table>
+        <tr>
+          <th>Tag</th>
+          <th>Description</th>
+          <th>Edit</th>
+        </tr>
+        <tr>
+          <td>
+            <input placeholder="tag" [(ngModel)]="tagtoinsert.tag">
+          </td>
+          <td>
+            <select [(ngModel)]="tagtoinsert.description">
+              <option *ngFor="let description of descriptions" [ngValue]="description">{{description.description}}
+              </option>
+            </select>
+          </td>
+          <td>
+            <button (click)="insert(tagtoinsert)">Insert</button>
+          </td>
+          <td>
+            <button (click)="clear()">Delete</button>
+          </td>
+        </tr>
+        <tr *ngFor="let tag of tags">
+          <td>
+            <label>{{tag.tag}}</label>
+          </td>
+          <td>
+            <label>{{tag.description.description}}</label>
+          </td>
+          <td>
+            <button (click)=update(tag)>Save</button>
+          </td>
+          <td>
+            <button (click)="delete(tag)">Delete</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-md-1">
+
+    </div>
+  </div>
+</div>
