--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -33,7 +33,7 @@
 
             <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#descriptions"
                 (click)="descriptionscollapse()">
-                <i class="fas fa-file-pdf-o" style="margin-right: 15px"></i>Descriptions
+                <i class="fas fa-file-pdf" style="margin-right: 15px"></i>Descriptions
             </button>
             <div class="collapsebtn" id="descriptions" *ngIf="isDescriptionCollapsed">
                 <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
@@ -44,7 +44,7 @@
             </div>
             <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#documents"
                 (click)="documentscollapse()">
-                <i class="fas fa-file-word-o" style="margin-right: 15px"></i>Documents
+                <i class="fas fa-file-word" style="margin-right: 15px"></i>Documents
             </button>
             <div class="collapsebtn" id="documents" *ngIf="isDocumentCollapsed">
                 <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
