--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
@@ -1,6 +1,8 @@
 .sidenav {
     height:92vh;
     width: 100%;
+    position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     background-color: #1e282d;
