--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.css
@@ -5,6 +5,7 @@
     left: 0;
     background-color: #1e282d;
     overflow-x: visible;
+    overflow-y: scroll;
     transition: 0.5s;
     padding-top: 0;
   }
