--- a/src/app/admin/folders/folders.component.html
+++ b/src/app/admin/folders/folders.component.html
@@ -38,10 +38,14 @@
             <input [(ngModel)]="folder.name">
           </td>
           <td>
-            <input [(ngModel)]="folder.library.name">
+            <select [(ngModel)]="foldertoinsert.library">
+              <option *ngFor="let library of libraries">{{library.name}}</option>
+            </select>
           </td>
           <td>
-            <input [(ngModel)]="folder.description.description">
+            <select [(ngModel)]="foldertoinsert.description">
+              <option *ngFor="let description of descriptions">{{description.description}}</option>
+            </select>
           </td>
         </tr>
       </table>
