--- a/src/app/admin/libraries/libraries.component.html
+++ b/src/app/admin/libraries/libraries.component.html
@@ -36,7 +36,7 @@
         </tr>
         <tr *ngFor="let library of libraries">
           <td>
-            <label>{{library.name}}</label>
+            <input [(ngModel)]="library.name">
           </td>
           <td>
             <label>{{library.description.description}}</label>
