--- a/src/app/admin/interestgroups/interestgroups.component.html
+++ b/src/app/admin/interestgroups/interestgroups.component.html
@@ -16,8 +16,8 @@
             <input placeholder="text" [(ngModel)]="interestgrouptoinsert.interestgroup">
           </td>
           <td>
-            <select [(ngModel)]="interestgrouptoinsert.interest">
-              <option *ngFor="let interest of interests" [ngValue]="interest">{{interest.interest}}</option>
+            <select class="form-control" [(ngModel)]="interestgrouptoinsert.interest.id">
+              <option *ngFor="let interest of interests" [ngValue]="interest.id">{{interest.interest}}</option>
             </select>
           </td>
           <td>
