--- a/src/app/admin/descriptions/descriptions.component.html
+++ b/src/app/admin/descriptions/descriptions.component.html
@@ -50,24 +50,24 @@
             <input [(ngModel)]="description.description">
           </td>
           <td>
-            <select [(ngModel)]="description.folder.id">
-              <option *ngFor="let folder of folders" [ngValue]="folder.id">{{folder.name}}</option>
+            <select [(ngModel)]="description.folder.name">
+              <option *ngFor="let folder of folders" [ngValue]="folder.name">{{folder.name}}</option>
             </select>
           </td>
           <td>
-           <select [(ngModel)]="description.library.id">
-             <option *ngFor="let library of libraries" [ngValue]="library.id">{{library.name}}</option>
-           </select>
+            <select [(ngModel)]="description.library.name">
+              <option *ngFor="let library of libraries" [ngValue]="library.name">{{library.name}}</option>
+            </select>>
           </td>
           <td>
-            <select [(ngModel)]="description.document.id">
-              <option *ngFor="let document of documents" [ngValue]="document.id">{{document.text}}</option>
-            </select>
+            <select [(ngModel)]="description.document.text">
+              <option *ngFor="let document of documents" [ngValue]="document.text">{{document.text}}</option>
+            </select>>
           </td>
           <td>
-            <select [(ngModel)]="description.interest.id">
-              <option *ngFor="let interest of interests" [ngValue]="interest.id">{{interest.interest}}</option>
-            </select>
+            <select [(ngModel)]="description.interest.interest">
+              <option *ngFor="let interest of interests" [ngValue]="interest.interest">{{interest.interest}}</option>
+            </select>>
           </td>
           <td>
             <button (click)=update(description)>Save</button>
