--- a/src/app/admin/descriptions/descriptions.component.html
+++ b/src/app/admin/descriptions/descriptions.component.html
@@ -57,17 +57,17 @@
           <td>
             <select [(ngModel)]="description.library">
               <option *ngFor="let library of libraries" [ngValue]="library">{{library.name}}</option>
-            </select>>
+            </select>
           </td>
           <td>
             <select [(ngModel)]="description.document">
               <option *ngFor="let document of documents" [ngValue]="document">{{document.text}}</option>
-            </select>>
+            </select>
           </td>
           <td>
             <select [(ngModel)]="description.interest">
               <option *ngFor="let interest of interests" [ngValue]="interest">{{interest.interest}}</option>
-            </select>>
+            </select>
           </td>
           <td>
             <button (click)=update(description)>Save</button>
