--- a/src/app/admin/descriptions/descriptions.component.html
+++ b/src/app/admin/descriptions/descriptions.component.html
@@ -50,23 +50,23 @@
             <input [(ngModel)]="description.description">
           </td>
           <td>
-            <select [(ngModel)]="description.folder">
-              <option *ngFor="let folder of folders" [ngValue]="folder">{{folder.name}}</option>
+            <select [(ngModel)]="description.folder.id">
+              <option *ngFor="let folder of folders" [ngValue]="folder.id">{{folder.name}}</option>
             </select>
           </td>
           <td>
-            <select [(ngModel)]="description.library">
-              <option *ngFor="let library of libraries" [ngValue]="library">{{library.name}}</option>
+            <select [(ngModel)]="description.library.id">
+              <option *ngFor="let library of libraries" [ngValue]="library.id">{{library.name}}</option>
             </select>
           </td>
           <td>
-            <select [(ngModel)]="description.document">
-              <option *ngFor="let document of documents" [ngValue]="document">{{document.text}}</option>
+            <select [(ngModel)]="description.document.id">
+              <option *ngFor="let document of documents" [ngValue]="document.id">{{document.text}}</option>
             </select>
           </td>
           <td>
-            <select [(ngModel)]="description.interest">
-              <option *ngFor="let interest of interests" [ngValue]="interest">{{interest.interest}}</option>
+            <select [(ngModel)]="description.interest.id">
+              <option *ngFor="let interest of interests" [ngValue]="interest.id">{{interest.interest}}</option>
             </select>
           </td>
           <td>
